# lampe

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE  Main.lean  README.md  rustfmt.toml
.github/workflows/: build-ci-image.yaml  ci-image.yaml  ci-noir.yaml  ci.yaml
Examples/: mathlib-manifest.json  test.sh
Examples/Arrays/: Nargo.toml
Examples/Arrays/lampe/: Extracted.lean  lake-manifest.json  lakefile.toml
Examples/Arrays/src/: main.nr
Examples/ConstGenerics/: Nargo.toml
Examples/ConstGenerics/lampe/: ConstGenerics.lean  lake-manifest.json  lakefile.toml
Examples/ConstGenerics/src/: main.nr
Examples/Dependencies/: Nargo.toml
Examples/Experiments/: Nargo.toml
Examples/Experiments/lampe/: Experiments-0.0.0.lean  Experiments.lean  lake-manifest.json  lakefile.toml
Examples/Experiments/src/: main.nr
Examples/ExtractionTests/: Nargo.toml
Examples/ExtractionTests/lampe/: ConstGenerics-0.0.0.lean  ExtractionTests-0.0.0.lean  ExtractionTests.lean  lake-manifest.json  lakefile.toml
Examples/ExtractionTests/src/: associated_type.nr  const_generics.nr  experiments.nr  field_generics.nr  globals.nr  lib.nr  multiple_generics.nr  struct_namespaces.nr  unconstrained_return.nr  unit_return.nr
Examples/FieldGenerics/: Nargo.toml
Examples/FieldGenerics/lampe/: FieldGenerics-0.0.0.lean  FieldGenerics.lean  lake-manifest.json  lakefile.toml
Examples/Globals/: Nargo.toml
Examples/Globals/lampe/: Globals-0.0.0.lean  Globals.lean  lake-manifest.json  lakefile.toml
Examples/LocalDependency/: Nargo.toml
Examples/Merkle/: Merkle.lean  Nargo.toml  Prover.toml  README.md  lake-manifest.json  lakefile.toml
Examples/Merkle/Merkle/: Extracted.lean  Field.lean  Ref.lean  Spec.lean
Examples/Merkle/lampe/: Merkle-0.0.0.lean  Merkle.lean  lake-manifest.json  lakefile.toml
Examples/Merkle/src/: main.nr
Examples/MerkleFromScratch/: .gitignore  Nargo.toml  README.md  user_actions.sh
Examples/MerkleFromScratch/src/: main.nr
Examples/MerkleFromScratch/user_files/: Field.lean  Ref.lean  Spec.lean  append_to_Merkle.lean
Examples/Multiple/lampe/: Multiple-0.0.0.lean  Multiple.lean  lake-manifest.json  lakefile.toml
Examples/Patterns/: Nargo.toml
Examples/Skyscraper/: Nargo.toml  Skyscraper.lean  lakefile.toml
Examples/TestDep/: Nargo.toml  clean.sh  user_actions.sh
Examples/TraitGenerics/: Nargo.toml
Examples/TypeOrder/: Nargo.toml
Examples/Unconstrained/: Nargo.toml
Examples/UnitReturn/: Nargo.toml
Examples/example1/: Example1.lean  Main.lean  lake-manifest.json  lakefile.toml
Examples/simple/: Nargo.toml  main.lean  other.lean
Lampe/: Lampe.lean  README.md  Tests.lean  lake-manifest.json  lakefile.lean  lakefile.toml
Lampe/Lampe/: Assignable.lean  Ast.lean  Basic.lean  Builtin.lean  Delab.lean  EHoare.lean  Helpers.lean  Hoare.lean  Lambda.lean  Lens.lean  Monotonicity.lean  Semantics.lean  SeparationLogic.lean  State.lean  Syntax.lean  Tp.lean  ValHeap.lean  Value.lean
Lampe/Tests/: Deprecations.lean  Envs.lean  Errors.lean  FieldBounds.lean  FieldGenerics.lean  Globals.lean  LargeArrayLit.lean  LenBuiltin.lean  MTree.lean  Monotonicity.lean  Negatives.lean  NewTest.lean  Poseidon2.lean  Syntax.lean  Tests.lean  UnitReturn.lean
docker/ci/: Dockerfile
docs/: CONTRIBUTING.md  Extracted Project Structure.md  Tips for Proving.md
examples/: README.md  test.sh  test.xsh
examples/FieldArithExtra/: Nargo.toml
examples/SimpleProject/: Nargo.toml
noir_stdlib/: extract_stdlib.xsh
noir_testing/: test.sh
nrmt/: Nargo.toml
nrmt/src/: main.nr
scripts/: blake3_ref.py  check_noir_version_consistency.xsh  download_stdlib.xsh  gen_bn254_pratt.py  gen_pratt.py  keccak_ref.py  lean_cc_wrapper.py  requirements.txt  secp256k1_ref.py  secp256r1_ref.py  test.xsh  utils.xsh
scripts/ci/: read_toolchain_versions.py  toolchain_versions.toml  verify_ci_image.py
src/: README.md  constants.rs  error.rs  lib.rs  main.rs  project.rs
src/error/: emit.rs  file.rs
src/file_generator/: error.rs  lean.rs  lean_toolchain.rs  mod.rs
src/lean/: ast.rs  builtin.rs  context.rs  emit.rs  generator.rs  indent.rs  mod.rs  pattern.rs  syntax.rs
src/noir/: mod.rs  project.rs  source.rs
stdlib/: Nargo.toml  README.md  extract.xsh  test.xsh
stdlib/lampe/: lake-manifest.json  lakefile.toml  std-0.0.0.lean  std-1.0.0-beta.11.lean  std-1.0.0-beta.12.lean  std-1.0.0-beta.14.lean  std-1.0.0-beta.3.lean
stdlib/noir/: Nargo.toml
testing/: .gitignore  test.sh  test.xsh
testing/Base64/: Nargo.toml  clean.sh
testing/Complexnr/: README.md
testing/Fraction/: Nargo.toml  README.md  lake-manifest.json  lakefile.toml
testing/Merkle/: .gitignore
testing/MerkleFromScratch/: clean.sh  user_actions.sh  user_actions.xsh
testing/Multiple/: Nargo.toml
testing/Sort/: Nargo.toml  README.md
testing/TestDep/: .gitignore  Nargo.toml  clean.sh  user_actions.sh  user_actions.xsh
testing/test_fixture/: Nargo.toml
testing_noir/: .gitignore  should_fail  should_succeed  test.sh  test.xsh
testing_noir/poseidon_vectors/: Nargo.toml  README.md
(+1020 files in other folders)
