[package]
name = "lampe"
version = "0.1.0"
edition = "2021"

description = "A tool for extracting Noir programs to equivalent definitions in Lean."
categories = ["compilers", "command-line-utilities"]
keywords = ["compiler", "transpiler", "lean", "noir"]

repository = "https://github.com/reilabs/lampe"
license = "MIT"

[dependencies]
fm = { git = "https://github.com/reilabs/noir", branch = "lampe-v1.0.0-beta.1" }
nargo = { git = "https://github.com/reilabs/noir", branch = "lampe-v1.0.0-beta.1" }
nargo_toml = { git = "https://github.com/reilabs/noir", branch = "lampe-v1.0.0-beta.1" }
noirc_driver = { git = "https://github.com/reilabs/noir", branch = "lampe-v1.0.0-beta.1" }
noirc_errors = { git = "https://github.com/reilabs/noir", branch = "lampe-v1.0.0-beta.1" }
noirc_frontend = { git = "https://github.com/reilabs/noir", branch = "lampe-v1.0.0-beta.1" }

clap = { version = "4.5.17", features = ["unstable-v5"] }
derivative = "2.2.0"
indoc = "2.0.5"
itertools = "0.13.0"
log = "0.4.22"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.87"

[[bin]]
name = "lampe"
path = "src/bin/main.rs"
