[package]
name = "lampe"
version = "0.1.0"
edition = "2021"

description = "A tool for extracting Noir programs to equivalent definitions in Lean."
categories = ["compilers", "command-line-utilities"]
keywords = ["compiler", "transpiler", "lean", "noir"]

repository = "https://github.com/reilabs/lampe"
license = "MIT"

[dependencies]
fm = { git = "https://github.com/noir-lang/noir", rev = "5071093f9b51e111a49a5f78d827774ef8e80c74" }
nargo = { git = "https://github.com/noir-lang/noir", rev = "5071093f9b51e111a49a5f78d827774ef8e80c74" }
nargo_toml = { git = "https://github.com/noir-lang/noir", rev = "5071093f9b51e111a49a5f78d827774ef8e80c74" }
noirc_driver = { git = "https://github.com/noir-lang/noir", rev = "5071093f9b51e111a49a5f78d827774ef8e80c74" }
noirc_errors = { git = "https://github.com/noir-lang/noir", rev = "5071093f9b51e111a49a5f78d827774ef8e80c74" }
noirc_frontend = { git = "https://github.com/noir-lang/noir", rev = "5071093f9b51e111a49a5f78d827774ef8e80c74" }

# Left behind to enable easier local development when needed
# fm = { path = "../noir/compiler/fm" }
# nargo = { path = "../noir/tooling/nargo" }
# nargo_toml = { path = "../noir/tooling/nargo_toml" }
# noirc_driver = { path = "../noir/compiler/noirc_driver" }
# noirc_errors = { path = "../noir/compiler/noirc_errors" }
# noirc_frontend = { path = "../noir/compiler/noirc_frontend" }

clap = { version = "4.5.17", features = ["unstable-v5"] }
derivative = "2.2.0"
indoc = "2.0.5"
itertools = "0.14.0"
thiserror = "2.0.12"
tempfile = "3.19.1"
petgraph = "0.6.5" # Cannot bump as it is currently required to be this version by a dependency
convert_case = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
toml = { version = "0.8.20" }

[dev-dependencies]
anyhow = "1.0.87"
tempfile = "3.8.1"
walkdir = "2.5.0"

[[bin]]
name = "lampe"
path = "src/bin/main.rs"

[profile.release]
debug = true
