[package]
name = "lampe"
version = "0.1.0"
edition = "2021"

description = "A tool for extracting Noir programs to equivalent definitions in Lean."
categories = ["compilers", "command-line-utilities"]
keywords = ["compiler", "transpiler", "lean", "noir"]

repository = "https://github.com/reilabs/lampe"
license = "MIT"

[dependencies]
# When update noir version used in here please remember about changing the
# `ci-noir` workflow and standard library to pull from the same version.
fm = { git = "https://github.com/noir-lang/noir", rev = "fd3925aaaeb76c76319f44590d135498ef41ea6c" }
nargo = { git = "https://github.com/noir-lang/noir", rev = "fd3925aaaeb76c76319f44590d135498ef41ea6c" }
nargo_toml = { git = "https://github.com/noir-lang/noir", rev = "fd3925aaaeb76c76319f44590d135498ef41ea6c" }
noirc_driver = { git = "https://github.com/noir-lang/noir", rev = "fd3925aaaeb76c76319f44590d135498ef41ea6c" }
noirc_errors = { git = "https://github.com/noir-lang/noir", rev = "fd3925aaaeb76c76319f44590d135498ef41ea6c" }
noirc_frontend = { git = "https://github.com/noir-lang/noir", rev = "fd3925aaaeb76c76319f44590d135498ef41ea6c" }

# Left behind to enable easier local development when needed
# fm = { path = "../noir/compiler/fm" }
# nargo = { path = "../noir/tooling/nargo" }
# nargo_toml = { path = "../noir/tooling/nargo_toml" }
# noirc_driver = { path = "../noir/compiler/noirc_driver" }
# noirc_errors = { path = "../noir/compiler/noirc_errors" }
# noirc_frontend = { path = "../noir/compiler/noirc_frontend" }

clap = { version = "4.5.46", features = ["unstable-v5"] }
derivative = "2.2.0"
itertools = "0.14.0"
thiserror = "2.0.16"
tempfile = "3.21.0"
petgraph = "0.8.2"
convert_case = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
toml = { version = "0.9.5" }

[dev-dependencies]
tempfile = "3.8.1"
walkdir = "2.5.0"

[[bin]]
name = "lampe"
path = "src/bin/main.rs"

[profile.release]
debug = true
